--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 codecov: true
+addons:
+  apt:
+    packages:
+      - gfortran
 julia:
   - 1.2
