--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Aaron Meyer <ameyer@ucla.edu>"]
 version = "0.1.2"
 
 [deps]
+DiffEqSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
