--- a/.github/workflows/pkg-update.yml
+++ b/.github/workflows/pkg-update.yml
@@ -21,15 +21,15 @@ jobs:
       - name: Update Manifest.toml
         run: julia --project=. -e "import Pkg; Pkg.update()"
 
-      # https://github.com/marketplace/actions/create-pull-request
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v1.6.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_MESSAGE: Update */Manifest.toml
-          PULL_REQUEST_TITLE: '[AUTO] Update */Manifest.toml'
-          PULL_REQUEST_LABELS: no changelog
-          PULL_REQUEST_BRANCH: create-pull-request/pkg-update
-          BRANCH_SUFFIX: none
-      - name: Check output environment variable
-        run: echo "Pull Request Number - ${{ env.PULL_REQUEST_NUMBER }}"
+        uses: peter-evans/create-pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: Upgrade packages
+          title: '[AUTO] Upgrade packages'
+          branch: create-pull-request/upgrade-pkgs
+          labels: automated pr, no changelog
+      - name: Check outputs
+        run: |
+          echo 'Pull Request Number - ${{ env.PULL_REQUEST_NUMBER }}'
+          echo 'Pull Request Number - ${{ steps.cpr.outputs.pr_number }}'
