--- a/.github/workflows/codeformat.yml
+++ b/.github/workflows/codeformat.yml
@@ -5,17 +5,15 @@ on:
     - cron: '0 0 * * *'
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        julia-version: [1.3.0]
         julia-arch: [x86]
-        os: [ubuntu-latest]
     steps:
       - uses: julia-actions/setup-julia@latest
         with:
-          version: ${{ matrix.julia-version }}
-      - uses: actions/checkout@v1
+          version: 1.3.0
+      - uses: actions/checkout@v2
       - name: Install JuliaFormatter and format
         run: |
           julia  -e 'import Pkg; Pkg.add("JuliaFormatter")'
