--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Aaron Meyer <ameyer@ucla.edu>"]
 version = "0.1.2"
 
 [deps]
+BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
