--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 RecursiveFactorization = "f2c3362d-daeb-58d1-803e-2bc74f2840b4"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SIMDPirates = "21efa798-c60a-11e8-04d3-e1a92915a26a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
