--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,3 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
