--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 GaussianProcesses = "891a1506-143c-57d2-908e-e1f8e92e6de9"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
